# cf-survey

./: .gitignore  Cargo.toml  Dockerfile  compose.yml  init.sql
src/: main.rs
static/: index.html
