[package]
name = "cf-survey"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clickhouse = "0.13.1"
sha2 = "0.10"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12.12", features = ["json"] }
